# iExtend

./: .gitignore  .perf-history.json  README.md  SETUP.md  iExtend.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: host-ci.yml  ipad-ci.yml  perf-nightly.yml  release.yml
bench/camera-rig/: README.md  measure_p2p_latency.py  requirements.txt
bench/camera-rig/screen-timecode/: Cargo.toml  README.md
bench/cluster/: README.md  inventory.yml  playbook.yml
bench/cluster/roles/base/tasks/: main.yml
bench/pencil-feel/: protocol.md
bench/soak/: dashboard.html  run-soak.sh
bench/spake2-interop/: README.md
design-source/: README.md
design-source/chats/: chat1.md
design-source/project/: iExtend.html
design-source/project/src/: app.jsx  frames.jsx  icons.jsx  scenes-ipad.jsx  scenes-pc.jsx
docs/: codesigning-procurement.md
docs/install/: linux.md
docs/superpowers/plans/: 2026-05-08-iextend-html-visual-deliverable.md  2026-05-08-plan-10-bench-rig-ci.md  2026-05-08-plan-2-rust-host-workspace.md  2026-05-08-plan-3-windows-iddcx-driver.md  2026-05-08-plan-4-linux-evdi-capture.md  2026-05-08-plan-5-webrtc-codec.md  2026-05-08-plan-6-ipad-swift-app.md  2026-05-08-plan-7-spake2-pairing.md  2026-05-08-plan-8-input-forwarding.md  2026-05-08-plan-9-installers-codesigning.md  2026-05-10-iextend-logo-plan.md  2026-05-10-screen-share-extend-iddcx-plan.md  2026-05-10-screen-share-mirror-webrtc-plan.md  2026-05-10-usb-pair-plan.md  2026-05-11-remaining-work.md
docs/superpowers/specs/: 2026-05-08-iextend-design.md  2026-05-10-iextend-logo-design.md  2026-05-10-usb-pair-design.md
host/: CONTRIBUTING.md  Cargo.toml  rust-toolchain.toml
host/.cargo/: config.toml
host/bench/screen-timecode/src/: main.rs  vsync_linux.rs  vsync_windows.rs
host/crates/fake-ipad/: Cargo.toml
host/crates/fake-ipad/src/: lib.rs  main.rs  pairing_client.rs
host/crates/fake-ipad/tests/: pair_smoke.rs
host/crates/iextend-tray/: Cargo.toml  build.rs
host/crates/iextend-tray/src/: app.rs  client.rs  main.rs  pair_screen.rs
host/crates/iextendd/: Cargo.toml  build.rs
host/crates/iextendd/examples/: smoke_loopback.rs
host/crates/iextendd/src/: cursor_protocol.rs  grpc_server.rs  keystore.rs  lib.rs  main.rs  pair_listener.rs  screen_share.rs  session.rs  signaling.rs  transport.rs  usb_listener.rs  windows_transport.rs
host/crates/iextendd/tests/: grpc_status_e2e.rs  log_format.rs  signaling_smoke.rs  synthetic_latency.rs  usb_pair_smoke.rs
host/crates/iextendd/tests/support/: loopback_peer.rs  mod.rs  timecode_source.rs
host/crates/ix-codec/: Cargo.toml
host/crates/ix-codec/src/: amf_hevc.rs  common.rs  lib.rs  mft_h264.rs  nvenc_av1.rs  nvenc_hevc.rs  probe.rs  qsv_hevc.rs  trait_.rs  vaapi_hevc.rs  x264_sw.rs
host/crates/ix-codec/tests/: encode_decode_roundtrip.rs  selection_logic.rs  trait_contract.rs
host/crates/ix-discover/: Cargo.toml
host/crates/ix-discover/src/: advertise.rs  browse.rs  lib.rs
host/crates/ix-display/: Cargo.toml
host/crates/ix-display-linux/: Cargo.toml
host/crates/ix-display-linux/src/: detect.rs  evdi.rs  lib.rs  nvidia_cuda.rs  secureboot.rs  wayland.rs  x11.rs
host/crates/ix-display-linux/src/ffi/: cuda.rs  libevdi.rs  mod.rs
host/crates/ix-display-linux/tests/: compositor_probe.rs  integration.rs  nvidia_probe.rs  secureboot_probe.rs  x11_coalesce.rs
host/crates/ix-display-windows/: Cargo.toml
host/crates/ix-display-windows/src/: capture_types.rs  dxgi_capture.rs  error.rs  frame_pump.rs  iddcx_bindings.rs  inverted_call.rs  lib.rs  wgc_capture.rs
host/crates/ix-display/src/: lib.rs
host/crates/ix-input/: Cargo.toml
host/crates/ix-input/src/: cursor_protocol.rs  lib.rs  linux.rs  q16.rs  windows.rs  windows_injector.rs  wire.rs
host/crates/ix-input/tests/: uinput_smoke.rs  wire_codec_corpus.rs  wire_vectors.json
host/crates/ix-pair-wire/: Cargo.toml
host/crates/ix-pair-wire/src/: lib.rs
host/crates/ix-pair-wire/tests/: swift_vectors.rs
host/crates/ix-rtc/: Cargo.toml
host/crates/ix-rtc/src/: bitrate_controller.rs  channels.rs  heartbeat.rs  lib.rs  pairing.rs  peer.rs  replay.rs  rtc_peer.rs  signaling.rs
host/crates/ix-rtc/tests/: spake2_rfc9382.rs
host/crates/ix-transport/: Cargo.toml
host/crates/ix-transport/src/: lib.rs
host/crates/ix-usb/: Cargo.toml
host/crates/ix-usb/src/: lib.rs
host/drivers/windows/: README.md
host/drivers/windows/iexdd/: Adapter.c  Adapter.h  Driver.c  Driver.h  Edid.c  Edid.h  IoQueue.c  IoQueue.h  Public.h  SwapChain.c  SwapChain.h  Trace.h  iexdd.inf  iexdd.vcxproj  test-signing.ps1
host/drivers/windows/vhf-stylus/: vhf-stylus.vcxproj
host/drivers/windows/vhf-stylus/inf/: vhf-stylus.inx
host/drivers/windows/vhf-stylus/src/: Driver.c  Driver.h  Public.h  hid_report.h
host/installer/linux/: AppImage.yml  dkms-mok-enrollment.sh
host/installer/linux/debian/: control  iextend.desktop  iextendd.service  postinst  prerm  rules
host/installer/linux/rpm/: iextend.spec
host/installer/windows/: build.ps1  iextend.appxmanifest
host/installer/windows/whql/: README.md
host/packaging/linux/: iextend-evdi-dkms.spec
host/packaging/linux/evdi-dkms/: dkms.conf  postinst  prerm  sign-key.sh
host/packaging/linux/iextend-evdi-dkms/debian/: control  postinst  prerm  rules
host/proto/: iextend.proto
host/xtask/: Cargo.toml
host/xtask/src/: main.rs
ipad/: Package.swift  README.md  project.yml
ipad/Frameworks/: README.md
ipad/iExtend/: ContentView.swift  Info.plist  iExtendApp.swift
ipad/iExtendInput/Sources/iExtendInput/: EventCapture.swift  PacketEncoder.swift
ipad/iExtendInput/Tests/iExtendInputTests/: iExtendInputTests.swift
ipad/iExtendKit/Sources/iExtendKit/: IExtendSession.swift
ipad/iExtendKit/Tests/iExtendKitTests/: iExtendKitTests.swift
ipad/iExtendUI/Sources/iExtendUI/: Theme.swift
ipad/iExtendUI/Tests/iExtendUITests/: BrandGradientTests.swift  LogoGeometryTests.swift
ipad/installer/: PrivacyPolicy.md
ipad/installer/AppStoreConnect/: Appfile  Fastfile
scripts/: generate-app-icon.sh
tests/: iextend.spec.ts
(+33 files in other folders)
