[workspace]
resolver = "2"
members = [
    "crates/iextendd",
    "crates/iextend-tray",
    "crates/ix-transport",
    "crates/ix-codec",
    "crates/ix-rtc",
    "crates/ix-discover",
    "crates/ix-display-windows",
    "crates/ix-display-linux",
    "crates/ix-input",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["iExtend contributors"]
license = "Apache-2.0"
repository = "https://github.com/REPLACE_WITH_OWNER/iExtend"

[workspace.dependencies]
tokio          = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync", "time"] }
tonic          = "0.12"
tonic-build    = "0.12"
prost          = "0.13"
tower          = "0.5"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror      = "1"
anyhow         = "1"
async-trait    = "0.1"
futures        = "0.3"
eframe         = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui           = "0.29"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
