[workspace]
resolver = "2"
members = [
    "crates/iextendd",
    "crates/iextend-tray",
    "crates/ix-transport",
    "crates/ix-codec",
    "crates/ix-rtc",
    "crates/ix-discover",
    "crates/ix-pair-wire",
    "crates/ix-display",
    "crates/ix-display-windows",
    "crates/ix-display-linux",
    "crates/ix-input",
    # Bench camera-rig timecode tool (not part of the shipping product).
    # Depends on platform display APIs (DXGI, DRM) — built only when needed.
    # Canonical source: bench/camera-rig/screen-timecode/ (mirrored here for workspace).
    "bench/screen-timecode",
    # xtask: cargo subcommand for Windows driver build / sign / install / trace.
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
# rust-toolchain.toml pins 1.90.0 for CI reproducibility; 1.88 is the real MSRV
# (eframe 0.29's transitive deps require 1.88).
authors = ["iExtend contributors"]
license = "Apache-2.0"
repository = "https://github.com/REPLACE_WITH_OWNER/iExtend"

[workspace.dependencies]
tokio          = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync", "time"] }
tonic          = "0.12"
tonic-build    = "0.12"
prost          = "0.13"
tower          = "0.5"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror      = "1"
anyhow         = "1"
async-trait    = "0.1"
futures        = "0.3"
eframe         = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui           = "0.29"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
