[package]
name = "fake-ipad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI test tool that impersonates an iPad during the SPAKE2 pairing handshake"
license = "Apache-2.0"
publish = false

[dependencies]
tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
base64      = "0.22"
rand_core   = { version = "0.6", features = ["std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2        = "0.10"
hkdf        = "0.12"
spake2      = "0.4"

ix-pair-wire = { path = "../ix-pair-wire" }
ix-rtc       = { path = "../ix-rtc" }

[dev-dependencies]
tempfile  = "3"
iextendd  = { path = "../iextendd" }
ix-rtc    = { path = "../ix-rtc" }
