[package]
name = "iextend-tray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
eframe             = { workspace = true }
egui               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
ix-transport       = { path = "../ix-transport" }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = "3"
