[package]
name = "iextendd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
tokio-stream       = "0.1"
crossbeam-queue    = "0.3"
ix-transport       = { path = "../ix-transport" }
ix-codec           = { path = "../ix-codec" }
ix-display         = { path = "../ix-display" }
ix-rtc             = { path = "../ix-rtc" }
ix-discover        = { path = "../ix-discover" }
ix-input           = { path = "../ix-input" }
ix-pair-wire       = { path = "../ix-pair-wire" }
serde_json         = "1"

# Plan 7 keystore
ed25519-dalek      = { version = "2", features = ["rand_core", "pkcs8"] }
rand_core          = { version = "0.6", features = ["std"] }
rusqlite           = { version = "0.32", features = ["bundled"] }
base64             = "0.22"
uuid               = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
ix-display-windows = { path = "../ix-display-windows" }
windows            = { version = "0.58", features = ["Win32_Security_Cryptography"] }

[target.'cfg(unix)'.dependencies]
ix-display-linux   = { path = "../ix-display-linux" }
secret-service     = { version = "4", features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
tempfile   = "3"
hyper-util = { version = "0.1", features = ["tokio"] }
tower      = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = "3"
