[package]
name = "iextendd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "iExtend daemon — captures the host display, encodes it, and serves it to a paired iPad over WebRTC"
license = "Apache-2.0"

# `cargo deb` packages this binary as iextend-daemon_<version>_amd64.deb. The
# real DKMS dependency (iextend-evdi-dkms) is declared in
# host/installer/linux/debian/control and ships through the proper installer
# pipeline in release.yml; this metadata is for the unsigned CI artifact only.
[package.metadata.deb]
name = "iextend-daemon"
maintainer = "iExtend contributors"
section = "net"
priority = "optional"
# libimobiledevice6 + usbmuxd power the USB pair flow (ix-usb / usb_listener).
# Marked Recommends rather than Depends so the package still installs in
# environments that don't need USB pair — the daemon falls back to Wi-Fi-only
# pair when the libs are absent.
recommends = "libimobiledevice6, usbmuxd"
extended-description = "Host daemon that captures the laptop display, encodes it, and streams to a paired iPad acting as a wireless second screen."
assets = [
    ["target/release/iextendd", "/usr/bin/", "755"],
]

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
tokio-stream       = "0.1"
crossbeam-queue    = "0.3"
ix-transport       = { path = "../ix-transport" }
ix-codec           = { path = "../ix-codec" }
ix-display         = { path = "../ix-display" }
ix-rtc             = { path = "../ix-rtc" }
ix-discover        = { path = "../ix-discover" }
ix-input           = { path = "../ix-input" }
ix-pair-wire       = { path = "../ix-pair-wire" }
ix-usb             = { path = "../ix-usb" }
serde_json         = "1"
tokio-util         = "0.7"

# Plan 7 keystore
ed25519-dalek      = { version = "2", features = ["rand_core", "pkcs8"] }
rand_core          = { version = "0.6", features = ["std"] }
rusqlite           = { version = "0.32", features = ["bundled"] }
base64             = "0.22"
uuid               = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
ix-display-windows = { path = "../ix-display-windows" }
windows            = { version = "0.58", features = ["Win32_Security_Cryptography"] }
# Windows named-pipe accept loop in main.rs uses async-stream's try_stream!
# to yield each connected NamedPipeServer instance to tonic.
async-stream       = "0.3"

[target.'cfg(unix)'.dependencies]
ix-display-linux   = { path = "../ix-display-linux" }
secret-service     = { version = "4", features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
tempfile   = "3"
hyper-util = { version = "0.1", features = ["tokio"] }
tower      = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = "3"
