[package]
name = "ix-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
ix-display  = { path = "../ix-display" }
bytes       = "1"
openh264    = { version = "0.6", optional = true }

# Media Foundation H.264 encoder (Windows-only). MF is part of every
# Windows install, so no feature flag — it's always available on Windows
# builds and auto-selects NVENC / AMF / QSV / software per host.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    # D3D11 device + DXGI device manager so hardware H.264 MFTs (NVENC /
    # AMD / Intel Quick Sync) accept ActivateObject + MFT_MESSAGE_SET_D3D_MANAGER.
    # Without these the hardware path returns D3DERR_INVALIDCALL.
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
proptest = "1"

[features]
default = ["sw-only"]
sw-only = ["openh264"]
nvenc   = []
qsv     = []
amf     = []
vaapi   = []
all-codecs = ["nvenc", "qsv", "amf", "vaapi", "sw-only"]
