[package]
name = "ix-discover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true, features = ["sync", "time", "rt"] }
mdns-sd     = "0.13"
base64      = "0.22"
