[package]
name = "ix-display-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[dependencies]
# Cross-platform: workspace-level deps that compile everywhere.
ix-display     = { path = "../ix-display" }
crossbeam      = "0.8"
thiserror      = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }

# Linux/Unix only — ashpd, x11rb, dlopen2, and libc all target the Wayland
# portal / X11 / DRI / evdi paths that don't exist on Windows. Without the
# cfg gate the workspace-wide cargo build fails on Windows because ashpd's
# transitive `std::os::fd::*` imports aren't available there.
[target.'cfg(target_os = "linux")'.dependencies]
dlopen2        = "0.8"
ashpd          = { version = "0.9", default-features = false, features = ["async-std"] }
x11rb          = { version = "0.13", features = ["randr", "damage", "shm", "allow-unsafe-code"] }
libc           = "0.2"

[features]
# Gates tests that need the real evdi kernel module + a graphical session.
integration = []

[lib]
path = "src/lib.rs"
