[package]
name = "ix-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# Enable the Linux uinput injector (requires /dev/uinput access).
linux = []
# Enable integration tests that open real OS device nodes.
integration = []

[dependencies]
thiserror   = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# libc for ioctl on /dev/uinput
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows user-mode HID injector — Win32 file IO + DeviceIoControl.
# Used by host/crates/ix-input/src/windows.rs to talk to the vhf-stylus.sys
# driver shipped in host/drivers/windows/vhf-stylus/.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
serde_json = "1"
