[package]
name = "ix-rtc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait    = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
bytes          = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Cryptography — pinned cipher suite per Plan 7:
#   SPAKE2-P256-SHA256-HKDF-HMAC-SHA256, AES-256-GCM cert-wrap, Ed25519 device keys.
spake2         = "0.4"
sha2           = "0.10"
hkdf           = "0.12"
hmac           = "0.12"
aes-gcm        = "0.10"
ed25519-dalek  = { version = "2", features = ["rand_core"] }
rand_core      = { version = "0.6", features = ["std"] }
zeroize        = "1"

ix-pair-wire   = { path = "../ix-pair-wire" }
ix-codec       = { path = "../ix-codec" }

[dev-dependencies]
hex            = "0.4"
tokio          = { workspace = true, features = ["test-util"] }
