[package]
name = "ix-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio       = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util"] }
