[package]
name        = "ix-usb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Thin runtime-loaded wrapper around libimobiledevice + libusbmuxd for USB-tunneled TCP to iOS devices"
license     = "Apache-2.0"

[dependencies]
anyhow            = { workspace = true }
tracing           = { workspace = true }
libloading        = "0.8"
crossbeam-channel = "0.5"
once_cell         = "1.19"

[dev-dependencies]
# Tests check that lib loading degrades gracefully — no extra deps needed.
